--- a/index.html
+++ b/index.html
@@ -88,50 +88,58 @@
                 </div>
               </div>
             </div>
-            <!--4B-->
-            <div class="row">
-              <div class="col-md-6 col-sm-6">
-                <div class="mb-3">
-                  <label for="txtTrainerLevel">Attribute 2</label>
-                  <select id='txtAttribute2' class="form-select">
-                    <option value="">--</option>
-                    <option value="FIRE">FIRE</option>
-                    <option value="EARTH">EARTH</option>
-                    <option value="AIR">AIR</option>
-                    <option value="WATER">WATER</option>
-                    <option value="NEUTRAL">NEUTRAL</option>
-                  </select>
+            <p>
+              <a class="btn btn-primary btn-sm" data-bs-toggle="collapse" href="#collapseMoreAttrib" role="button" aria-expanded="false" aria-controls="collapseMoreAttrib">
+                <i class="bi bi-plus-lg"></i>
+                More Attribute
+              </a>
+            </p>
+            <div class="collapse" id="collapseMoreAttrib">
+              <div class="row">
+                <div class="col-md-6 col-sm-6">
+                  <div class="mb-3">
+                    <label for="txtTrainerLevel">Attribute 2</label>
+                    <select id='txtAttribute2' class="form-select">
+                      <option value="">--</option>
+                      <option value="FIRE">FIRE</option>
+                      <option value="EARTH">EARTH</option>
+                      <option value="AIR">AIR</option>
+                      <option value="WATER">WATER</option>
+                      <option value="NEUTRAL">NEUTRAL</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-md-6 col-sm-6">
+                  <div class="mb-3">
+                    <label for="">Value</label>
+                    <input type="text" id='txtAttribute2Val' class="form-control" placeholder="0">
+                  </div>
                 </div>
               </div>
-              <div class="col-md-6 col-sm-6">
-                <div class="mb-3">
-                  <label for="">Value</label>
-                  <input type="text" id='txtAttribute2Val' class="form-control" placeholder="0">
+              
+              <div class="row">
+                <div class="col-md-6 col-sm-6">
+                  <div class="mb-3">
+                    <label for="txtTrainerLevel">Attribute 3</label>
+                    <select id='txtAttribute3' class="form-select">
+                      <option value="">--</option>
+                      <option value="FIRE">FIRE</option>
+                      <option value="EARTH">EARTH</option>
+                      <option value="AIR">AIR</option>
+                      <option value="WATER">WATER</option>
+                      <option value="NEUTRAL">NEUTRAL</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-md-6 col-sm-6">
+                  <div class="mb-3">
+                    <label for="">Value</label>
+                    <input type="text" id='txtAttribute3Val' class="form-control" placeholder="0">
+                  </div>
                 </div>
               </div>
             </div>
-            <!--5B-->
-            <div class="row">
-              <div class="col-md-6 col-sm-6">
-                <div class="mb-3">
-                  <label for="txtTrainerLevel">Attribute 3</label>
-                  <select id='txtAttribute3' class="form-select">
-                    <option value="">--</option>
-                    <option value="FIRE">FIRE</option>
-                    <option value="EARTH">EARTH</option>
-                    <option value="AIR">AIR</option>
-                    <option value="WATER">WATER</option>
-                    <option value="NEUTRAL">NEUTRAL</option>
-                  </select>
-                </div>
-              </div>
-              <div class="col-md-6 col-sm-6">
-                <div class="mb-3">
-                  <label for="">Value</label>
-                  <input type="text" id='txtAttribute3Val' class="form-control" placeholder="0">
-                </div>
-              </div>
-            </div>
+
             <!--Bonus power-->
             <div class="row">
               <div class="col-md-12">
