--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="row">
               <div class="col">
                 <div class="mb-3">
-                 <label for="txtTrainerPower">Trainer power</label>
+                 <label for="txtTrainerPower"><i class="bi bi-lightning-charge-fill"></i>Trainer power</label>
                  <input type="text" class="form-control form-control-sm" id="txtTrainerPower" placeholder="0">
                </div>
                </div>
@@ -88,7 +88,7 @@
               </div>
             </div>
             <p>
-              <a class="btn btn-outline-info btn-sm" data-bs-toggle="collapse" href="#collapseMoreAttrib" role="button" aria-expanded="false" aria-controls="collapseMoreAttrib">
+              <a class="btn btn-outline-success btn-sm" data-bs-toggle="collapse" href="#collapseMoreAttrib" role="button" aria-expanded="false" aria-controls="collapseMoreAttrib">
                 <i class="bi bi-plus-lg"></i>
                 More Attribute
               </a>
@@ -175,7 +175,7 @@
             <div class="row">
               <div class="col">
                 <div class="mb-3">
-                  <label for="">Enemy power</label>
+                  <label for=""><i class="bi bi-lightning-charge-fill"></i>Enemy power</label>
                   <input type="text" id='txtEnemyPower' class="form-control form-control-sm" placeholder="0">
                 </div>
               </div>
@@ -191,22 +191,19 @@
           <h5 class="card-header">Result</h5>
           <div class="card-body">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col">
                     <button type="button" id='btnCalc' class="btn btn-success">
                       <i class="bi-calculator"></i>
-                      Calculate</button>
+                      Calculate
+                    </button>
                 </div>
             </div>
-            <div class="row">
-              <div class="col-md-12 m-2">
+            <div class="row mt-3">
+              <div class="col">
                 <h6 id='lbEnemyPwrRange'></h6>
                 <h6 id='lbResult'></h6>
                 <h4 id='lbWinRate'></h5>
             </div>
-            </div>
-            <div class="row">
-              <span>Standard</span>
-                <img src="assets/elements.png" alt="" height="50px" width="500px"> 
             </div>
           </div>
         </div>
@@ -216,7 +213,6 @@
     <p class="text-center">If you like my work, you can give me a cup of coffee (BUNI, BUR, BNB) to my wallet</p>
     <p class="text-primary text-center" style="font-size: small;">0x54529107acD03401C7d9E12DEbf7fD30c5e75D62 <i class="btn bi-clipboard" style="font-weight: bold;" onclick="copyAddr('0x54529107acD03401C7d9E12DEbf7fD30c5e75D62')"></i></p>
     <p class="text-center">
-      <span>(c) 2021 harrytrinh</span><br>
       <span><i class="bi-telegram"></i> Telegram: <a href="https://t.me/harrytrinh">@harrytrinh</a></span>
     </p>
   </div>
