--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     <p class="text-center">If you like my work, you can give me a cup of coffee (BUNI, BUR, BNB) to my wallet</p>
     <p class="text-primary text-center" style="font-size: small;">0x54529107acD03401C7d9E12DEbf7fD30c5e75D62 <i class="btn bi-clipboard" style="font-weight: bold;" onclick="copyAddr('0x54529107acD03401C7d9E12DEbf7fD30c5e75D62')"></i></p>
     <p class="text-center">
-      <span><i class="bi-telegram"></i> Telegram: <a href="https://t.me/harrytrinh">@harrytrinh</a></span>
+      <span><i class="bi-telegram"></i> Telegram: @harrytrinh</span>
     </p>
   </div>
   </div>
